Fixed alignment and added hover states
Fixed alignment and added hover states

--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -82,17 +82,18 @@ h1 {
 .calltoaction {
   position: absolute;
   background-color: #F2F2F2;
+  height: 300px;
 }
 /* Instructions */
 /* SEND MONEY */
 .sendmoney {
   float: left;
-  max-width: 174px;
+  max-width: 170px;
   border: 1px;
   border-color: gray;
   background: #f2f2f2;
   display: block;
-  margin: 30px 45px 30px 45px;
+  margin: 30px 45px 30px 50px;
 }
 .sendmoneycircle {
   border: 1px solid #a1a1a1;
@@ -104,6 +105,9 @@ h1 {
   position: center;
 }
 .sendmoney p {
+  display: none;
+}
+.sendmoney:hover p {
   text-align: center;
   font-size: 10px;
   display: block
@@ -117,7 +121,7 @@ h1 {
 
 /* RECEIVE */
 .receive {
-  width: 174px;
+  width: 170px;
   background: #f2f2f2;
   display: block;
   float: left;
@@ -133,6 +137,9 @@ h1 {
   display: block;
 }
 .receive p {
+  display: none;
+}
+.receive:hover p {
   text-align: center;
   font-size: 10px;
   display: block;
@@ -146,7 +153,7 @@ h1 {
 /* REPEAT */
 .repeat {
   float: left;
-  width: 174px;
+  width: 170px;
   background: #f2f2f2;
   display: block;
   margin: 30px 45px 30px 45px;
@@ -161,6 +168,9 @@ h1 {
   display: block;
 }
 .repeat p {
+  display: none;
+}
+.repeat:hover p {
   text-align: center;
   font-size: 10px;
   display: block;
